Modified project settings

--- a/project.config
+++ b/project.config
@@ -19,3 +19,5 @@
 	push = +force group user/noname55804
 	pushTag = group user/noname55804
 	pushSignedTag = group user/noname55804
+[project]
+	state = hidden
